[project]
name = "linkedin-post-automation"
version = "0.1.0"
description = "CLI tool to generate and publish LinkedIn posts using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
